feat: 对讲组件支持切换前后摄像头

--- a/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/demo.wxss
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/demo.wxss
@@ -10,8 +10,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
+.no-channel-tip.full {
+  height: 100vh;
+}
+
 .iot-p2p-voice.my-voice {
   width: 0;
   height: 0;
