--- a/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/demo.wxml
+++ b/demo/miniprogramIoT/pages/video/pages/xp2p-demo-ipc/demo.wxml
@@ -104,6 +104,7 @@
           bind:voicesuccess="onVoiceProcess"
           bind:voicestop="onVoiceProcess"
           bind:voiceerror="onVoiceError"
+          bind:systempermissionerror="onVoiceSystemPermissionError"
           bind:netstatus="onVoiceLivePusherNetStatus"
         />
         <view class="group-button-area">
@@ -154,6 +155,7 @@
           bind:previewchange="onIntercomPreviewChange"
           bind:previewerror="onIntercomPreviewError"
           bind:livepushercontextchange="onIntercomLivePusherContextChange"
+          bind:systempermissionerror="onIntercomSystemPermissionError"
           bind:netstatus="onIntercomLivePusherNetStatus"
         ></iot-p2p-intercom>
         <!-- <live-pusher
