feat: 支持设置优先使用的打洞协议

--- a/demo/miniprogramIoT/components/iot-device-input/input.wxml
+++ b/demo/miniprogramIoT/components/iot-device-input/input.wxml
@@ -107,6 +107,11 @@
               </view>
             </view>
           </view>
+          <view>
+            <view wx:for="{{serverChecks}}" wx:key="field" class="input-item {{item.scene && item.scene !== scene ? 'hide' : ''}}">
+              <label><switch type="checkbox" checked="{{item.checked}}" data-field="{{item.field}}" data-index="{{index}}" bindchange="switchServerCheck"/>{{item.text}}</label>
+            </view>
+          </view>
         </view>
       </view>
     </view>
