--- a/demo/miniprogramIoT/pages/index/index.wxml
+++ b/demo/miniprogramIoT/pages/index/index.wxml
@@ -85,7 +85,8 @@
   </view>
   <view class="page-section">
     <navigator url="/pages/user-files/files?name=logs" hover-class="navigator-hover">跳转到 Log 管理页</navigator>
-    <navigator url="/pages/user-files/files?name=records" hover-class="navigator-hover">跳转到 录像管理页</navigator>
+    <navigator url="/pages/user-files/files?name=flvs" hover-class="navigator-hover">跳转到 flv录像管理页</navigator>
+    <navigator url="/pages/user-files/files?name=streams" hover-class="navigator-hover">跳转到 stream录像管理页</navigator>
     <navigator url="/pages/user-files/files?name=voices" hover-class="navigator-hover">跳转到 对讲管理页</navigator>
     <navigator url="/pages/user-files/files?name=downloads" hover-class="navigator-hover">跳转到 下载管理页</navigator>
     <navigator url="/pages/test-video/test" hover-class="navigator-hover">跳转到 Video 测试页</navigator>
